--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,103 @@
-.game{
-  width: 400px;
-  height: 400px;
-  border: 2px solid black;
-  display: flex;
-  flex-direction: column;
+* {
+  box-sizing: border-box;
 }
 .row {
   display: flex;
   flex-direction: row;
 }
 .cell {
-  width: 20px;
-  height: 20px;
-  border: 1px solid black;
-  background: white;
+  width: 24px;
+  height: 24px;
+  border: 1px solid #243235;
+  background: #26393D;
+  position: relative;
+}
+.cell::after {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  display: block;
+  content: "";
+  width: 100%;
+  height: 1px;
+  background: #406174;
 }
 .cell--occupied {
-  background: black;
+  box-shadow: inset 0px 0px 0px 5px rgba(0, 0, 0, 0.2);
+  z-index: 1;
 }
-/* .block{
-  width: 20px;
-  height: 20px;
-  border: 1px solid black;
-  box-sizing: border-box;
-} */
+.cell--occupied::after {
+  position: absolute;
+  z-index: 0;
+  top: 0px;
+  left: 0px;
+  display: block;
+  content: "";
+  width: auto;
+  height: auto;
+  background: transparent;
+  border: 11px solid;
+}
+.cell--I {
+  background: lightseagreen;
+}
+.cell--I::after {
+  border-top-color: rgba(30, 178, 170, 0.7);
+  border-left-color: rgba(32, 172, 180, 0.7);
+  border-right-color: rgba(31, 184, 170, 0.7);
+  border-bottom-color: rgba(32, 170, 181, 0.7);
+}
+.cell--J {
+  background: blue;
+}
+.cell--J::after {
+  border-top-color: rgba(6, 96, 245, 0.7);
+  border-left-color: rgba(4, 84, 225, 0.7);
+  border-right-color: rgba(6, 86, 223, 0.7);
+  border-bottom-color: rgba(6, 76, 210, 0.7);
+}
+.cell--L {
+  background: orange;
+}
+.cell--L::after {
+  border-top-color: rgba(236, 115, 11, 0.7);
+  border-left-color: rgba(229, 110, 8, 0.7);
+  border-right-color: rgba(229, 110, 10, 0.7);
+  border-bottom-color: rgba(220, 103, 8, 0.7);
+}
+.cell--O {
+  background: yellow;
+}
+.cell--O::after {
+  border-top-color: rgba(236, 231, 28, 0.7);
+  border-left-color: rgba(222, 217, 29, 0.7);
+  border-right-color: rgba(221, 217, 24, 0.7);
+  border-bottom-color: rgba(212, 208, 25, 0.7);
+}
+.cell--S {
+  background: green;
+}
+.cell--S::after {
+  border-top-color: rgba(0, 234, 48, 0.7);
+  border-left-color: rgba(2, 220, 45, 0.7);
+  border-right-color: rgba(2, 220, 46, 0.7);
+  border-bottom-color: rgba(2, 204, 42, 0.7);
+}
+.cell--T {
+  background: purple;
+}
+.cell--T::after {
+  border-top-color: rgba(188, 25, 236, 0.7);
+  border-left-color: rgba(169, 24, 213, 0.7);
+  border-right-color: rgba(171, 22, 212, 0.7);
+  border-bottom-color: rgba(156, 19, 193, 0.7);
+}
+.cell--Z {
+  background: red;
+}
+.cell--Z::after {
+  border-top-color: rgba(236, 6, 42, 0.7);
+  border-left-color: rgba(212, 7, 38, 0.7);
+  border-right-color: rgba(223, 8, 41, 0.7);
+  border-bottom-color: rgba(210, 7, 37, 0.7);
+}
